# faux

./: .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .yamllint.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  biome.json  commitlint.config.mjs  deny.toml  knip.json  lychee.toml  package.json  release-please-config.json  renovate.json  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _diagnostic.yml  ci.yml  codeql.yml  labeler.yml  pages.yml  pr-quality.yml  release.yml  scorecard.yml  security.yml  stale.yml
cli/: repl.ts  wasm-demo.ts
docs/planning/: test-coverage.md
rust/: arithmetic.rs  braces.rs  glob.rs  lib.rs
rust/executor/: mod.rs  pipeline.rs  redirect.rs
rust/expansion/: mod.rs  parameter.rs
rust/parser/: ast.rs  mod.rs  tokenizer.rs
src/: history-expand.ts  hooks.ts  index.ts  shell.ts  tracker.ts  transforms.ts  wasm-bridge.ts  wasm-interfaces.ts  wasm-runtime.ts
src/commands/: builder.ts  registry.ts  types.ts
tests/: builtins.test.ts  commands.test.ts  environment.test.ts  expansion.test.ts  history.test.ts  hooks.test.ts  ifs-splitting.test.ts  io.test.ts  mount.test.ts  node.test.ts  parser-edge.test.ts  parser.test.ts  process-substitution.test.ts  script-execution.test.ts  shell.test.ts  signal-abort.test.ts  startup-files.test.ts  strict-mode.test.ts  tracker.test.ts  transforms.test.ts  traps.test.ts  tree-sitter.integration.test.ts  tree-sitter.test.ts  umask.test.ts
(+115 files in other folders)
