[package]
name = "faux-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "WASM-accelerated runtime for faux"
repository = "https://github.com/ambiently-work/faux"
license = "MIT"
readme = "README.md"

[lib]
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Targeted code-smell lints; clippy::all stays at default severity.
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
